syntax = "proto3";

option go_package = "capabilities/v2/chain-capabilities/consensus/ocr3/types";

package chain_capabilities_ocr3_config_types;

message ReportingPluginConfig {
  // These fields are shadowing the `ReportingPluginLimits` fields.
  // See: https://github.com/smartcontractkit/libocr/blob/master/offchainreporting2plus/ocr3types/plugin.go#L296
  uint32 maxQueryLengthBytes = 1;
  uint32 maxObservationLengthBytes = 2;
  uint32 maxOutcomeLengthBytes = 3;
  uint32 maxReportLengthBytes = 4;
  uint32 maxReportCount = 5;

  uint32 maxBatchSize = 6;
}